--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 COINBASE_KEY=
-NEXT_LOCAL_SWELL_STORE_ID=
-NEXT_LOCAL_SWELL_PK=
+NEXT_PUBLIC_SWELL_STORE_ID=
+NEXT_PUBLIC_SWELL_PK=
 SWELL_SECRET_KEY=
 HOSTNAME=
 PORT=
-NEXT_LOCAL_HOST=http://$HOSTNAME:$PORT
+NEXT_PUBLIC_HOST=http://$HOSTNAME:$PORT
