--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.8.5",
-    "next": "13.2.4",
-    "react": "18.2.0",
+    "next": "^13.3.1",
+    "react": "^18.2.0",
     "react-coinbase-commerce": "^1.6.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "swell-js": "^3.21.2",
     "swell-node": "^5.0.0"
   },
